--- a/styles/sass/layout/_destination.scss
+++ b/styles/sass/layout/_destination.scss
@@ -1,4 +1,5 @@
 .grid-container--destination {
+    gap: 2rem;
     grid-template-areas: 
         'title'
         'image'
